--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 .container {
-  max-width: 1024px;
+  max-width: 1280px;
   margin: 0 auto;
   padding: 2rem 1.5rem;
   border-left: 1px solid lightgrey;
@@ -53,6 +53,10 @@ nav ul li a {
   background-color: grey;
 }
 
+.content .container:last-child {
+  background-color: whitesmoke;
+}
+
 /* Banner Ruleset */
 .banner {
   display: flex;
@@ -95,6 +99,7 @@ nav ul li a {
   text-align: center;
   padding: 0.5rem 0;
   background-color: darkgrey;
+  font-size: 1.5rem;
 }
 
 
@@ -108,7 +113,6 @@ nav ul li a {
   display: flex;
   flex-flow: column;
   justify-content: space-between;
-  margin-right: 1.5rem;
   width: 60%;
 }
 
@@ -138,17 +142,18 @@ nav ul li a {
   margin-left: 1.5rem;
 }
 
-.info-secondary {
+.secondary {
   display: flex;
   flex-flow: column;
   width: 40%;
   margin-right: -1.5rem;
   border-left: 1px solid lightgrey;
-  margin-top: -3.5rem;
+  margin-left: 1.5rem;
 }
 
 .info:last-child {
   background-color: grey;
+  border-bottom: none;
 }
 
 .info {
@@ -186,4 +191,123 @@ nav ul li a {
 
 .data span {
   color: lightblue;
+}
+
+/* Courses Ruleset */
+.course h1 {
+  margin: 2rem 0;
+  font-size: 2rem;
+  font-weight: bold;
+  text-align: center;
+}
+
+.courses {
+  display: flex;
+  flex-flow: row wrap;
+  margin: 2rem 0;
+  padding: 0 4.5rem;
+}
+
+.courseinfo {
+  width: 30%;
+  display: flex;
+  flex-flow: column;
+  margin: 2rem auto;
+  background-color: whitesmoke;
+  padding-bottom: 1.5rem;
+}
+
+.courseinfo .img-container {
+  width: 100%;
+}
+
+.courseinfo .img-container img {
+  height: auto;
+  width: 100%;
+}
+
+.courseinfo h3 {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-top: 1rem;
+  margin-left: 1rem;
+}
+
+.courseinfo p {
+  margin: 0.5rem 1rem;
+}
+
+
+/* Thesis Ruleset */
+.thesis {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.thesis h1 {
+  font-size: 2rem;
+  font-weight: bold;
+  text-align: center;
+  width: 100%;
+  margin: 2rem 0;
+}
+
+.mainvid {
+  display: flex;
+  flex-flow: column;
+  width: 60%;
+}
+
+.mainvid h2 {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-top: 1.5rem;
+}
+
+.mainvid p {
+  margin-top: 0.5rem;
+}
+
+.vid-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.vid-container video {
+  width: 100%;
+  height: auto;
+}
+
+.thesis .secondary {
+  margin-top: 0;
+  border-left: none;
+}
+
+.thesis .info:first-child {
+  background-color: darkgrey;
+}
+
+.thesis .info:last-child {
+  background-color: whitesmoke;
+}
+
+/* Footer Ruleset */
+footer {
+  display: flex;
+  border-top: 1px solid grey;
+  align-items: center;
+  font-size: 0.75rem;
+}
+
+footer span {
+  flex-grow: 1;
+}
+
+footer nav ul {
+  display: flex;
+}
+
+footer nav ul li p {
+  padding-left: 1rem;
 }
