--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,10 +1,19 @@
+/* Color Palet:
+Dark Grey: #343536
+Medium Grey: #595959
+Light Grey: #929292
+Light Blue: #62A1C3
+Dark Blue: #2C6C8F */
+
 /* Universtal Rulesets */
 html {
-  font-size: 16px;
+  font-size: 18px;
 }
 
 body {
   background-color: whitesmoke;
+  font-family: Roboto, sans-serif;
+  line-height: 1.4;
 }
 
 .container {
@@ -13,6 +22,11 @@ body {
   padding: 2rem 1.5rem;
   border-left: 1px solid lightgrey;
   border-right: 1px solid lightgrey;
+}
+
+.title {
+  font-size: 2.5rem;
+  font-weight: 900;
 }
 
 /* Header Ruleset */
@@ -28,10 +42,12 @@ header.container {
   display: flex;
   align-items: center;
   flex-grow: 1;
+  font-size: 1.5rem;
+  font-family: Ubuntu;
 }
 
 .logo .img-container img {
-  height: 32px;
+  height: 3rem;
 }
 
 /* Navigation Ruleset */
@@ -46,6 +62,14 @@ nav ul li {
 nav ul li a {
   text-decoration: none;
   color: black;
+}
+
+.bold {
+  font-weight: 900;
+}
+
+.light {
+  color: lightgrey;
 }
 
 /* Page Content Ruleset */
@@ -83,13 +107,8 @@ nav ul li a {
   width: 30%;
 }
 
-.headline h1 {
-  font-size: 2rem;
-  font-weight: bold;
-}
-
 .headline h2 {
-  font-size: 1.5rem;
+  font-size: 1.6rem;
   font-weight: bold;
   margin: 1.5rem 0;
 }
@@ -130,8 +149,6 @@ nav ul li a {
 
 .info-main h1 {
   margin-top: 2rem;
-  font-size: 2rem;
-  font-weight: bold;
 }
 
 .info-main p {
@@ -140,6 +157,11 @@ nav ul li a {
 
 .info-main span {
   margin-left: 1.5rem;
+}
+
+.source {
+  font-family: Helvetica, sans-serif;
+  font-size: .85rem;
 }
 
 .secondary {
@@ -196,8 +218,6 @@ nav ul li a {
 /* Courses Ruleset */
 .course h1 {
   margin: 2rem 0;
-  font-size: 2rem;
-  font-weight: bold;
   text-align: center;
 }
 
@@ -245,8 +265,6 @@ nav ul li a {
 }
 
 .thesis h1 {
-  font-size: 2rem;
-  font-weight: bold;
   text-align: center;
   width: 100%;
   margin: 2rem 0;
@@ -277,6 +295,7 @@ nav ul li a {
 .vid-container video {
   width: 100%;
   height: auto;
+  background-color: grey;
 }
 
 .thesis .secondary {
