--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -36,6 +36,7 @@ body {
 @media only screen and (max-width: 1024px) {
   .container {
     border: none;
+    border-bottom: 1px solid lightgrey;
   }
 }
 
@@ -125,6 +126,16 @@ nav ul li a {
 
 .content .container:last-child {
   background-color: whitesmoke;
+}
+
+@media only screen and (max-width: 470px) {
+  .content .container:nth-child(2n+1) {
+    background-color: whitesmoke;
+  }
+
+  .content .container:first-child {
+    background-color: lightgrey;
+  }
 }
 
 /* Banner Ruleset */
@@ -372,6 +383,39 @@ nav ul li a {
   margin: 0.5rem 1rem;
 }
 
+@media only screen and (max-width: 470px) {
+  .course h1 {
+    margin-top: 1.5rem;
+    margin-bottom: 1rem;
+  }
+
+  .courses {
+    flex-flow: column nowrap;
+    padding: 0;
+    margin: 0;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .courseinfo {
+    width: 100%;
+    padding: 0;
+    margin: .5rem 0;
+    background-color: lightgrey;
+  }
+
+  .courseinfo h3 {
+    margin-top: 1.5rem;
+    margin-bottom: 1rem;
+  }
+
+  .courseinfo .img-container,
+  .type,
+  .coursedesc {
+    display: none;
+  }
+
+}
 
 /* Thesis Ruleset */
 .thesis {
