--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -195,12 +195,13 @@ nav ul li a {
 
   .headline {
     margin: -8rem 1rem 2rem 1rem;
-    padding: 0 1rem;
+    padding: 0;
     width: 100%;
     background-color: lightgrey;
   }
 
   .headline h1 {
+    margin-top: 1rem;
     margin-left: 2rem;
   }
 
@@ -379,7 +380,8 @@ nav ul li a {
 
   .information .secondary .info {
     flex-flow: column;
-    padding: 0;
+    padding: .5rem;
+    border-top: 1px solid lightgrey;
   }
 
   .information .secondary .info .img-container {
